fixed layout on index, both buttons jump

--- a/css/base.css
+++ b/css/base.css
@@ -111,6 +111,10 @@ header {
 	float: left;
 	margin-right: 50px;
 }
+.existing_game{
+	float: right;
+	margin-left: 50px;
+}
 
 /* #Typography
 ================================================== */
